PN-1871: fix limit days cases and add test